Added crossover configuration and sidechain processing

--- a/res/main/i18n/default/bundles.json
+++ b/res/main/i18n/default/bundles.json
@@ -1,7 +1,7 @@
 {
 	"mb_ringmod_sc": {
 		"name": "Multiband Ring Modulated Sidechain",
-		"description": "This plugin allows to apply a specific multiban sidechaining technique based on\nring modulation and subtraction of the original signal."
+		"description": "This plugin allows to apply a specific multiband sidechaining technique based on\nring modulation and subtraction of the original signal."
 	}
 }
 
